# zero2production

./: Cargo.toml
.github/workflows/: general.yml
migrations/: 20250111173354_create_subscriptions_table.sql
src/: configuration.rs  main.rs  startup.rs
src/routes/: subscription.rs
tests/: health_check.rs
